修改token配置